fixed sizing issue of header on small small mobile displays to look a lot better, simple fix

--- a/frontend/src/assets/css/header.css
+++ b/frontend/src/assets/css/header.css
@@ -135,7 +135,7 @@ a.navlink {
 
 @media (max-width: 500px) {
   .header h1{
-    font-size: .8rem;
-    margin-left: 2.5rem;
+    font-size: .95rem;
+    margin-left: 1rem;
   }
 }
