--- a/frontend/src/assets/css/login.css
+++ b/frontend/src/assets/css/login.css
@@ -2,13 +2,20 @@
 @import './header.css';
 @import './main.css';
 
+
+h1{
+    font-size: 3rem;
+    color: #421603;
+}
+
 .login-page{
     display: flex;
     flex-direction: column;
     padding-top: 50px;
-    padding-bottom:50px;
+    padding-bottom: 50px;
     justify-content: center;
     align-items: center;
+    min-height: 70vh;
 }
 
 .login-form{
@@ -28,8 +35,12 @@
     font-weight: 600;
     align-items: left;
     width: 100%;
+    font-size: 1.75rem;
 }
 
+.input-text{
+    font-size: 2rem;
+}
 .oauth{
     margin: 1rem;
 }
@@ -41,6 +52,42 @@
     background: linear-gradient(to right, #ffa946,#fc5b2e);
     padding: 0.5rem 1rem 0.5rem;
     text-decoration: none;
-    border-radius: 2px;
+    border-radius: 5px;
     color: #000;
+    border-style: none;
+    font-size: 1.75rem;
+}
+
+.oauth-button{
+    background: white;
+    padding: 0.5rem 1rem 0.5rem;
+    text-decoration: none;
+    border-radius: 5px;
+    color: #000;
+    border-style: solid;
+    font-size: 1.75rem;
+}
+
+.github-logo{
+    width: 25px;
+    height: auto;
+}
+
+@media (max-width: 700px){
+    h1{
+        font-size: 1.5rem;
+    }
+    .login-page{
+        min-height: 30vh;
+    }
+    .login-form{
+        padding: 0.5rem;
+    }
+    .input-field{
+        font-size: 1rem;
+    }
+    .input-text{
+        font-size: 1.5rem;
+        width: 200px;
+    }
 }
